--- a/app/views/topics/show.html.erb
+++ b/app/views/topics/show.html.erb
@@ -17,3 +17,10 @@
 
 <%= link_to 'Edit', edit_topic_path(@topic) %> |
 <%= link_to 'Back', topics_path %>
+
+<h2>Toots</h2>
+  <div id="toots">
+    <%= render @topic.toots %>
+  </div>
+
+  <%= render 'toots/new', topic: @topic %>
