fix add toot only current_user

--- a/app/views/topics/show.html.erb
+++ b/app/views/topics/show.html.erb
@@ -23,4 +23,6 @@
     <%= render @topic.toots %>
   </div>
 
+<% if current_user.id == @topic.user_id %>
   <%= render 'toots/new', topic: @topic %>
+<% end %>
