--- a/app/views/topics/show.html.erb
+++ b/app/views/topics/show.html.erb
@@ -12,7 +12,7 @@
 
 <p>
   <strong>User:</strong>
-  <%= @topic.user_id %>
+  <%= User.find(@topic.user_id).uid %>
 </p>
 
 <%= link_to 'Edit', edit_topic_path(@topic) %> |
