--- a/app/views/topics/index.html.erb
+++ b/app/views/topics/index.html.erb
@@ -19,7 +19,7 @@
         <td><%= topic.about %></td>
         <td><%= User.find(topic.user_id).uid %></td>
         <td><%= link_to 'Show', topic %></td>
-        <% if user_signed_in? && if current_user.id == topic.user_id %>
+        <% if user_signed_in? && current_user.id == topic.user_id %>
         <td><%= link_to 'Edit', edit_topic_path(topic) %></td>
         <td><%= link_to 'Destroy', topic, method: :delete, data: { confirm: 'Are you sure?' } %></td>
         <% end %>
