--- a/app/views/toots/_new.html.erb
+++ b/app/views/toots/_new.html.erb
@@ -1,4 +1,4 @@
-<%= form_for([ @topic, Toot.new ], remote: true) do |form| %>
+<%= form_for([ @topic, Toot.new ]) do |form| %>
     Your Comment:<br>
     <%= form.text_area :content, size: '50x20' %><br>
     <%= form.submit %>
