--- a/app/views/topics/index.html.erb
+++ b/app/views/topics/index.html.erb
@@ -18,9 +18,9 @@
         <td><%= topic.title %></td>
         <td><%= topic.about %></td>
         <td><%= User.find(topic.user_id).uid %></td>
-        <td><%= button_to 'Show', topic %></td>
+        <td><%= link_to 'Show', topic, class: 'btn btn-default' %></td>
         <% if user_signed_in? && current_user.id == topic.user_id %>
-        <td><%= button_to 'Edit', edit_topic_path(topic) %></td>
+        <td><%= link_to 'Edit', edit_topic_path(topic), class: 'btn btn-default' %></td>
         <td><%= button_to 'Destroy', topic, method: :delete, data: { confirm: 'Are you sure?' } %></td>
         <% end %>
       </tr>
