fix private button

--- a/app/views/topics/_form.html.erb
+++ b/app/views/topics/_form.html.erb
@@ -23,7 +23,7 @@
 
   <div class="field">
     <%= form.label :private %>
-    <%= form.check_box :private, {}, true, false  %>
+    <%= form.check_box :private, {}, "true", "false"  %>
   </div>
 
   <div class="actions">
