--- a/app/views/topics/show.html.slim
+++ b/app/views/topics/show.html.slim
@@ -18,7 +18,25 @@ p
 = link_to 'Back', topics_path
 h2
   | Toots
-#toots
+#macy-container
   = render @topic.toots
 - if user_signed_in? && current_user.id == @topic.user_id
   = render 'toots/new', topic: @topic
+
+javascript:
+    var macy = Macy({
+      container: '#macy-container',
+      trueOrder: false,
+      waitForImages: false,
+      columns: 6,
+      margin: {
+          x: 10,
+          y: 5,
+      },
+      breakAt: {
+          1200: 5,
+          940: 3,
+          520: 2,
+          400: 1
+      }
+  });
