--- a/app/views/toots/_toot.html.slim
+++ b/app/views/toots/_toot.html.slim
@@ -1,2 +1,3 @@
-p
-  = sanitize "#{toot.content}", :tags => %w(iframe)
+div.p
+  .toot-container
+    = sanitize "#{toot.content}", :tags => %w(iframe)
