--- a/app/assets/stylesheets/topics.scss
+++ b/app/assets/stylesheets/topics.scss
@@ -16,3 +16,18 @@
   .clearfix:before, .clearfix:after { content: ""; display: table; }
   .clearfix:after { clear: both; }
   .clearfix { zoom: 1; }
+
+
+.toot-container {
+    position: relative;
+    padding-bottom: 56.25%;
+    padding-top: 30px; height: 0; overflow: hidden;
+  }
+  
+.toot-container iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
